force-app/main/default/objects/Message__c/fields/Button_ID__c.field-meta.xml
<CustomField>
    <fullName>Button_ID__c</fullName>
    <label>Button_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>