force-app/main/default/objects/Message__c/fields/File_Show__c.field-meta.xml
<CustomField>
    <fullName>File_Show__c</fullName>
    <label>File Show</label>
    <type>TextArea</type>
</CustomField>