force-app/main/default/objects/Message__c/fields/Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Id__c</fullName>
    <label>Image_Id</label>
    <length>70</length>
    <type>Text</type>
</CustomField>