force-app/main/default/objects/Message__c/fields/Image_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Type__c</fullName>
    <label>Image_Type</label>
    <length>70</length>
    <type>Text</type>
</CustomField>