force-app/main/default/objects/Message__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>To define the media type</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>