force-app/main/default/objects/Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sender__c</columns>
    <columns>Receiver__c</columns>
    <columns>Status__c</columns>
    <columns>Message_Body__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>